CM - MODIFIED: Semi-Fixed Create/Delete Sub Text
For some reason value of submit form on delete/create
products is not visible.

assets/styles/formatting.scss:
- As temp fix to issue defined styles on input and gave
  appropriate background images for time bing

--- a/assets/styles/formatting.scss
+++ b/assets/styles/formatting.scss
@@ -225,6 +225,17 @@ ul {
   margin: 10px;
 }
 
+#add-product {
+  width: 80%;
+  background-image: url('https://i.imgur.com/EaVRYPat.png');
+}
+
+#delete-product {
+  width: 80%;
+  background-image: url('https://i.imgur.com/x9ymwxc.png?3');
+
+}
+
 // ==============================================
 // ==================  User Interactions End
 // ==============================================
